# Brillo

./: .gitignore  CHANGELOG.md  README.md  cabal.haskell-ci  cabal.project  flake.nix  makefile  stack.yaml
.github/workflows/: haskell-ci.yml  tetris.yml  windows-ci.yml
brillo/: Brillo.hs  brillo.cabal
brillo-algorithms/: brillo-algorithms.cabal
brillo-algorithms/Brillo/Algorithms/: RayCast.hs
brillo-algorithms/Brillo/Data/: Extent.hs  Quad.hs  QuadTree.hs
brillo-examples/: LICENSE  README.md  brillo-examples.cabal
brillo-examples/picture/2048/: Main.hs  readme.md
brillo-examples/picture/Antialiasing/: Main.hs
brillo-examples/picture/Bitmap/: Main.hs
brillo-examples/picture/Boids/: KDTree2d.hs  Main.hs  Vec2.hs
brillo-examples/picture/CanvasEditor/: Main.hs
brillo-examples/picture/Chess/: Main.hs  readme.md
brillo-examples/picture/CircleComparison/: Main.hs
brillo-examples/picture/Clock/: Main.hs
brillo-examples/picture/Color/: Main.hs
brillo-examples/picture/CompressedBitmap/: Main.hs
brillo-examples/picture/Conway/: Cell.hs  Main.hs  World.hs
brillo-examples/picture/Cursors/: Main.hs
brillo-examples/picture/Draw/: Main.hs
brillo-examples/picture/DropFiles/: Main.hs
brillo-examples/picture/Easy/: Main.hs
brillo-examples/picture/Eden/: Cell.hs  Community.hs  Main.hs  World.hs
brillo-examples/picture/Export/: Main.hs  README.md
brillo-examples/picture/Flake/: Main.hs
brillo-examples/picture/FuleLayout/: Main.hs
brillo-examples/picture/GUI/: Main.hs
brillo-examples/picture/GameEvent/: Main.hs
brillo-examples/picture/Graph/: Main.hs
brillo-examples/picture/Gravity/: Main.hs
brillo-examples/picture/Hello/: Main.hs
brillo-examples/picture/Interaction/: Main.hs
brillo-examples/picture/Lifespan/: Cell.hs  Community.hs  Main.hs  World.hs
brillo-examples/picture/Lines/: Main.hs
brillo-examples/picture/Machina/: Main.hs
brillo-examples/picture/Occlusion/: Cell.hs  Data.hs  Main.hs  State.hs  World.hs
brillo-examples/picture/PacMan/: GhostAI.hs  Main.hs  Maze.hs  Structs.hs
brillo-examples/picture/PickFiles/: Main.hs
brillo-examples/picture/Polygons/: Main.hs
brillo-examples/picture/Render/: Main.hs
brillo-examples/picture/Shader/: Main.hs
brillo-examples/picture/Snake/: Main.hs
brillo-examples/picture/SpaceInvaders/: Main.hs
brillo-examples/picture/Styrene/: Actor.hs  Advance.hs  Collide.hs  Config.hs  Contact.hs  Main.hs  QuadTree.hs  World.hs
brillo-examples/picture/Tetris/: Main.hs  readme.md
brillo-examples/picture/Tetris/src/: Config.hs  Drawing.hs  Figures.hs  Game.hs  Util.hs  World.hs
brillo-examples/picture/TicTacToe/: Main.hs  readme.md
brillo-examples/picture/Tree/: Main.hs
brillo-examples/picture/TrueType/: Main.hs
brillo-examples/picture/Visibility/: Draw.hs  Interface.hs  Main.hs  State.hs  World.hs
brillo-examples/picture/Visibility/Geometry/: Randomish.hs  Segment.hs
brillo-examples/picture/Zen/: Main.hs
brillo-export/: ChangeLog.md  README.md  brillo-export.cabal
brillo-export/app/: Demo.hs
brillo-export/src/Brillo/: Export.hs
brillo-export/src/Brillo/Export/: Bitmap.hs  Gif.hs  Image.hs  PNG.hs  SVG.hs  Tga.hs  Tiff.hs  WebP.hs
brillo-export/src/Brillo/Export/output/: sample.tga  sample.tiff
brillo-export/test/: Export.hs  SVGTest.hs  WebPTest.hs  comprehensive.tga  comprehensive.tiff  growing_polgons1.tga  growing_polgons1.tiff  growing_polgons2.tga  growing_polgons2.tiff  growing_polgons3.tga  growing_polgons3.tiff  growing_polgons4.tga  growing_polgons4.tiff  growing_polgons5.tga  growing_polgons5.tiff  growing_polgons6.tga  growing_polgons6.tiff  growing_polgons7.tga  growing_polgons7.tiff
brillo-juicy/: LICENSE  README.md  brillo-juicy.cabal  brillo-juicy.hs
brillo-juicy/Brillo/: Juicy.hs
brillo-rendering/: brillo-rendering.cabal
brillo-rendering/Brillo/: Rendering.hs
brillo-rendering/Brillo/Internals/Data/: Color.hs  Picture.hs
brillo-rendering/Brillo/Internals/Rendering/: Bitmap.hs  Circle.hs  Color.hs  Common.hs  Picture.hs  Polygon.hs  Shader.hs  State.hs  TrueTypeFont.hs  VectorFont.hs
brillo/Brillo/: Geometry.hs
brillo/Brillo/Data/: Bitmap.hs  Color.hs  Controller.hs  Cursor.hs  Display.hs  FileDialog.hs  Picture.hs  Point.hs  Vector.hs  ViewPort.hs  ViewState.hs
brillo/Brillo/Data/Point/: Arithmetic.hs
brillo/Brillo/Geometry/: Angle.hs  Line.hs
brillo/Brillo/Interface/: Environment.hs
brillo/Brillo/Interface/IO/: Animate.hs  Display.hs  Game.hs  Interact.hs  Simulate.hs
brillo/Brillo/Interface/Pure/: Animate.hs  Display.hs  Game.hs  Simulate.hs
brillo/Brillo/Internals/: Color.hs  TinyFileDialogs.chs
brillo/Brillo/Internals/Interface/: Animate.hs  Backend.hs  Callback.hs  Debug.hs  Display.hs  Event.hs  Game.hs  Interact.hs  Simulate.hs  Window.hs
brillo/Brillo/Internals/Interface/Animate/: State.hs  Timing.hs
brillo/Brillo/Internals/Interface/Backend/: GLFW.hs  Types.hs
brillo/Brillo/Internals/Interface/Common/: Exit.hs
brillo/Brillo/Internals/Interface/Simulate/: Idle.hs  State.hs
brillo/Brillo/Internals/Interface/ViewState/: KeyMouse.hs  Motion.hs  Reshape.hs
brillo/cbits/: tinyfiledialogs.h
gloss/: gloss.cabal
gloss-examples/: README.md  gloss-examples.cabal
gloss-rendering/: gloss-rendering.cabal
gloss-rendering/Graphics/Gloss/Internals/Rendering/: Picture.hs
gloss/Graphics/: Gloss.hs
gloss/Graphics/Gloss/Interface/IO/: Display.hs
gloss/Graphics/Gloss/Internals/Interface/: Backend.hs
gloss/Graphics/Gloss/Internals/Interface/Backend/: GLFW.hs  Types.hs
gloss/Graphics/Gloss/Internals/Interface/Simulate/: Idle.hs
test/T25-SpaceLeak/: Main.hs
test/T41-ThickCircleVexity/: Main.hs
