cabal-version: 3.0
name:          brillo-algorithms
version:       1.13.3
license:       MIT
license-file:  LICENSE
author:        Ben Lippmeier, Adrian Sieber
maintainer:    brillo@ad-si.com
build-type:    Simple
stability:     stable
category:      Graphics
homepage:      https://github.com/ad-si/Brillo
description:
  Data structures and algorithms for working with 2D graphics.

synopsis:
  Data structures and algorithms for working with 2D graphics.

tested-with:   GHC ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.2 || == 9.12.2

source-repository head
  type:     git
  location: https://github.com/ad-si/Brillo

library
  default-language: GHC2021
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.14

  ghc-options:      -O2 -Wall
  exposed-modules:
    Brillo.Algorithms.RayCast
    Brillo.Data.Extent
    Brillo.Data.Quad
    Brillo.Data.QuadTree
