cabal-version: 3.0
name:          brillo-examples
version:       1.13.3
license:       MIT
license-file:  LICENSE
author:        Ben Lippmeier, Adrian Sieber
maintainer:    brillo@ad-si.com
build-type:    Simple
stability:     experimental
category:      Graphics
homepage:      https://github.com/ad-si/Brillo
description:
  Examples using the Brillo graphics library.
  A mixed bag of fractals, particle simulations and cellular automata.

synopsis:      Examples using the Brillo library
tested-with:   GHC ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.3 || ==9.12.2

flag llvm
  description:
    Compile via LLVM. This produces much better object code
    but your GHC needs to have been built against the LLVM compiler.

  default:     False

source-repository head
  type:     git
  location: https://github.com/ad-si/Brillo

executable brillo-bitmap
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Bitmap
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-boids
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Boids
  other-modules:
    KDTree2d
    Vec2

  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , random  >=1.2    && <1.3
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -threaded -rtsopts

executable brillo-clock
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Clock
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-color
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Color
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-conway
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Conway
  other-modules:
    Cell
    World

  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , random  >=1.2    && <1.3
    , text    >=2.0    && <2.2
    , vector  >=0.13   && <0.14

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-draw
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Draw
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-dropfiles
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/DropFiles
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-easy
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Easy
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-eden
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Eden
  other-modules:
    Cell
    Community
    World

  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , random  >=1.2    && <1.3
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-flake
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Flake
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-gameevent
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/GameEvent
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-interaction
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Interaction
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-hello
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Hello
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-lifespan
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Lifespan
  other-modules:
    Cell
    Community
    World

  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , random  >=1.2    && <1.3
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-lines
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Lines
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-machina
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Machina
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-occlusion
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Occlusion
  other-modules:
    Cell
    Data
    State
    World

  build-depends:
    , base               >=4.8    && <5
    , brillo             >=1.13.3 && <1.15
    , brillo-algorithms  >=1.13.3 && <1.15
    , text               >=2.0    && <2.2

  ghc-options:      -O2 -threaded -rtsopts

executable brillo-pickfiles
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/PickFiles
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-polygons
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Polygons
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-styrene
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Styrene
  other-modules:
    Actor
    Advance
    Collide
    Config
    Contact
    QuadTree
    World

  build-depends:
    , base        >=4.8    && <5
    , brillo      >=1.13.3 && <1.15
    , containers  >=0.5    && <0.9
    , text        >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-tree
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Tree
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-visibility
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Visibility
  other-modules:
    Draw
    Geometry.Randomish
    Geometry.Segment
    Interface
    State
    World

  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , vector  >=0.13   && <0.14

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-zen
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Zen
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-graph
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Graph
  build-depends:
    , base        >=4.8    && <5
    , brillo      >=1.13.3 && <1.15
    , containers  >=0.5    && <0.9
    , random      >=1.2    && <1.3
    , text        >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-gravity
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Gravity
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , random  >=1.2    && <1.3

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-render
  default-language: GHC2021
  build-depends:
    , base              >=4.8    && <5
    , brillo            >=1.13.3 && <1.15
    , brillo-rendering  >=1.13.3 && <1.15
    , GLFW-b            >=3.3    && <4
    , text              >=2.0    && <2.2

  main-is:          Main.hs
  hs-source-dirs:   picture/Render
  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-truetype
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/TrueType
  build-depends:
    , base       >=4.8    && <5
    , brillo     >=1.13.3 && <1.15
    , directory  >=1.3    && <1.4
    , freetype2  >=0.2    && <0.4
    , text       >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-gui
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/GUI
  build-depends:
    , base       >=4.8    && <5
    , brillo     >=1.13.3 && <1.15
    , directory  >=1.3    && <1.4
    , text       >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-2048
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/2048
  build-depends:
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , lens    >=5.0    && <6
    , random  >=1.2    && <1.3
    , split   >=0.2    && <0.3
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-tetris
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Tetris picture/Tetris/src
  other-modules:
    Config
    Drawing
    Figures
    Game
    Util
    World

  build-depends:
    , array       >=0.5    && <0.6
    , base        >=4.8    && <5
    , brillo      >=1.13.3 && <1.15
    , containers  >=0.5    && <0.9
    , mtl         >=2.2    && <2.4
    , random      >=1.2    && <1.3
    , text        >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-chess
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Chess
  build-depends:
    , base          >=4.8    && <5
    , brillo        >=1.13.3 && <1.15
    , brillo-juicy  >=0.2    && <0.3
    , containers    >=0.5    && <0.9
    , text          >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-tictactoe
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/TicTacToe
  build-depends:
    , array   >=0.5    && <0.6
    , base    >=4.8    && <5
    , brillo  >=1.13.3 && <1.15
    , random  >=1.2    && <1.3
    , text    >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts

executable brillo-export
  default-language: GHC2021
  main-is:          Main.hs
  hs-source-dirs:   picture/Export
  build-depends:
    , base           >=4.8    && <5
    , brillo         >=1.13.3 && <1.15
    , brillo-export  >=0.1    && <0.2
    , directory      >=1.3    && <1.4
    , text           >=2.0    && <2.2

  ghc-options:      -O2 -Wall -threaded -rtsopts
