name:               brillo-export
version:            0.1.0.4
synopsis:
  Export Brillo pictures to png, bmp, tga, tiff, gif, svg and juicy-pixels-image

description:
  Export Brillo pictures to various image formats including PNG, BMP, TGA, TIFF, animated GIF, and SVG.
  Forked from gloss-export and adapted for the Brillo graphics library.

tested-with:
  GHC ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.3 || ==9.12.2

homepage:           https://github.com/ad-si/Brillo
bug-reports:        https://github.com/ad-si/Brillo/issues
author:             Timo A
maintainer:         timo-a@gmx.ch
license:            MIT
build-type:         Simple
cabal-version:      >=1.10
category:           Graphics
extra-source-files:
  ChangeLog.md
  README.md

data-dir:           test
data-files:
  expected_bmp.png
  expected_circle.png
  expected_circles.png
  expected_comprehensive.png
  expected_growing_polgons.gif
  expected_growing_polgons1.png
  expected_growing_polgons2.png
  expected_growing_polgons3.png
  expected_growing_polgons4.png
  expected_growing_polgons5.png
  expected_growing_polgons6.png
  expected_growing_polgons7.png
  expected_large_image.png
  expected_p10.png
  expected_p100.png
  expected_p20.png
  expected_p40.png
  expected_p60.png
  loadme.bmp

source-repository head
  type:     git
  location: https://github.com/ad-si/Brillo

library
  hs-source-dirs:   src
  ghc-options:      -fwarn-unused-imports
  build-depends:
      base              >=4.7    && <5
    , brillo-rendering  >=1.13.3 && <1.15
    , GLFW-b            >=1.0.0  && <4
    , JuicyPixels       >=3.2    && <4
    , OpenGLRaw         >=3.0    && <4
    , text              >=2.0    && <3
    , vector            >=0.9.1  && <1

  exposed-modules:
    Brillo.Export
    Brillo.Export.Bitmap
    Brillo.Export.Gif
    Brillo.Export.Image
    Brillo.Export.PNG
    Brillo.Export.SVG
    Brillo.Export.Tga
    Brillo.Export.Tiff

  other-modules:    Paths_brillo_export
  default-language: Haskell2010

executable brillo-export-exe
  main-is:          Demo.hs
  hs-source-dirs:   app
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base           >=4.7    && <5
    , brillo         >=1.13.3 && <1.15
    , brillo-export

  other-modules:    Paths_brillo_export
  default-language: Haskell2010

test-suite brillo-export-test
  type:             exitcode-stdio-1.0
  main-is:          Export.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base           >=4.7    && <5
    , brillo         >=1.13.3 && <1.15
    , brillo-export
    , directory
    , filepath
    , GLFW-b         >=1.0.0  && <4
    , JuicyPixels
    , text           >=2.0    && <3

  other-modules:    Paths_brillo_export
  default-language: Haskell2010

test-suite brillo-svg-test
  type:             exitcode-stdio-1.0
  main-is:          SVGTest.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base           >=4.7    && <5
    , brillo         >=1.13.3 && <1.15
    , brillo-export
    , directory
    , filepath
    , text           >=2.0    && <3

  default-language: Haskell2010
