cabal-version: 3.0
name:          brillo-juicy
version:       0.2.4
synopsis:
  Load any image supported by Juicy.Pixels in your brillo application

description:
  Lets you convert any image supported by Juicy.Pixels in a brillo application
  by converting to brillo' Bitmap representation.
  Version 0.1.2 just enabled caching (from a frame to the next, and so on)
  of the images you load, so that they are not recomputed for each frame.
  Credits go to Jonathan Daugherty for the patch.

homepage:      https://github.com/ad-si/Brillo
license:       BSD-3-Clause
license-file:  LICENSE
author:        Alp Mestanogullari <alpmestan@gmail.com>, Adrian Sieber
maintainer:    Adrian Sieber
category:      Graphics
build-type:    Simple

library
  default-language: GHC2021
  exposed-modules:  Brillo.Juicy
  build-depends:
    , base         >=4.8    && <5
    , bmp          >=1.2    && <1.3
    , brillo       >=1.13.3 && <1.15
    , bytestring   >=0.11   && <0.12
    , JuicyPixels  >=3.3    && <3.4
    , vector       >=0.13   && <0.14

  ghc-options:      -O2 -Wall

executable brillo-juicy-viewer
  default-language: GHC2021
  main-is:          brillo-juicy.hs
  build-depends:
    , base         >=4.8    && <5
    , bmp          >=1.2    && <1.3
    , brillo       >=1.13.3 && <1.15
    , bytestring   >=0.11   && <0.12
    , JuicyPixels  >=3.3    && <3.4
    , vector       >=0.13   && <0.14

  ghc-options:      -O2 -Wall -threaded
  other-modules:    Brillo.Juicy
