cabal-version: 3.0
name:          brillo-rendering
version:       1.13.3
license:       MIT
license-file:  LICENSE
author:        Elise Huard, Ben Lippmeier, Adrian Sieber
maintainer:    brillo@ad-si.com
category:      Graphics
build-type:    Simple
synopsis:      Brillo picture data types and rendering functions.
description:
  Brillo picture data types and rendering functions.
  These functions don't do any window management.
  If you want Brillo to setup your window as well,
  then use the plain @brillo@ package.

tested-with:   GHC ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.2 || ==9.12.2

source-repository head
  type:     git
  location: https://github.com/ad-si/Brillo

library
  default-language: GHC2021
  exposed-modules:  Brillo.Rendering
  other-modules:
    Brillo.Internals.Data.Color
    Brillo.Internals.Data.Picture
    Brillo.Internals.Rendering.Bitmap
    Brillo.Internals.Rendering.Circle
    Brillo.Internals.Rendering.Color
    Brillo.Internals.Rendering.Common
    Brillo.Internals.Rendering.Picture
    Brillo.Internals.Rendering.State
    Brillo.Internals.Rendering.TrueTypeFont
    Brillo.Internals.Rendering.VectorFont

  build-depends:
    , base        >=4.8  && <5
    , bmp         >=1.2  && <1.3
    , bytestring  >=0.11 && <0.13
    , containers  >=0.5  && <0.9
    , freetype2   >=0.2  && <0.4
    , GLFW-b      >=3.3  && <4
    , OpenGL      >=2.12 && <3.1
    , text        >=2.0  && <2.2

  ghc-options:      -Wall -O2
