cabal-version:      3.0
name:               brillo
version:            1.13.3
license:            MIT
license-file:       LICENSE
author:             Ben Lippmeier, Adrian Sieber
maintainer:         brillo@ad-si.com
build-type:         Simple
stability:          stable
category:           Graphics
homepage:           https://github.com/ad-si/Brillo
description:
  Brillo hides the pain of drawing simple vector graphics
  behind a nice data type and a few display functions.
  Brillo uses GLFW and OpenGL under the hood,
  but you won't need to worry about any of that.
  Get something cool on the screen in under 10 minutes.

synopsis:
  Painless 2D vector graphics, animations, and simulations powered by GLFW

tested-with:
  GHC ==9.4.8 || ==9.6.7 || ==9.8.4 || ==9.10.2 || == 9.12.2

extra-source-files: cbits/tinyfiledialogs.h

source-repository head
  type:     git
  location: https://github.com/ad-si/Brillo

library
  default-language:   GHC2021
  build-depends:
    , base              >=4.8    && <5
    , brillo-rendering  >=1.13.3 && <1.15
    , containers        >=0.5    && <0.9
    , GLFW-b            >=3.3    && <4
    , OpenGL            >=2.12   && <3.1
    , text              >=2.0    && <2.2

  build-tool-depends: c2hs:c2hs
  include-dirs:       cbits/
  c-sources:          cbits/tinyfiledialogs.c
  cc-options:         -DHSFORCECONSOLE=0
  ghc-options:        -O2 -Wall
  exposed-modules:
    Brillo
    Brillo.Data.Bitmap
    Brillo.Data.Color
    Brillo.Data.Controller
    Brillo.Data.Display
    Brillo.Data.FileDialog
    Brillo.Data.Picture
    Brillo.Data.Point
    Brillo.Data.Point.Arithmetic
    Brillo.Data.Vector
    Brillo.Data.ViewPort
    Brillo.Data.ViewState
    Brillo.Geometry
    Brillo.Geometry.Angle
    Brillo.Geometry.Line
    Brillo.Interface.Environment
    Brillo.Interface.IO.Animate
    Brillo.Interface.IO.Display
    Brillo.Interface.IO.Game
    Brillo.Interface.IO.Interact
    Brillo.Interface.IO.Simulate
    Brillo.Interface.Pure.Animate
    Brillo.Interface.Pure.Display
    Brillo.Interface.Pure.Game
    Brillo.Interface.Pure.Simulate

  other-modules:
    Brillo.Internals.Color
    Brillo.Internals.Interface.Animate
    Brillo.Internals.Interface.Animate.State
    Brillo.Internals.Interface.Animate.Timing
    Brillo.Internals.Interface.Backend
    Brillo.Internals.Interface.Backend.GLFW
    Brillo.Internals.Interface.Backend.Types
    Brillo.Internals.Interface.Callback
    Brillo.Internals.Interface.Common.Exit
    Brillo.Internals.Interface.Debug
    Brillo.Internals.Interface.Display
    Brillo.Internals.Interface.Event
    Brillo.Internals.Interface.Game
    Brillo.Internals.Interface.Interact
    Brillo.Internals.Interface.Simulate
    Brillo.Internals.Interface.Simulate.Idle
    Brillo.Internals.Interface.Simulate.State
    Brillo.Internals.Interface.ViewState.KeyMouse
    Brillo.Internals.Interface.ViewState.Motion
    Brillo.Internals.Interface.ViewState.Reshape
    Brillo.Internals.Interface.Window
    Brillo.Internals.TinyFileDialogs
